# nstl

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
designs/: string.excalidraw
include/nstl/: algorithm.hpp  cstring.h  exceptions.h  string.h  string.hpp  type_traits.h  utility.hpp
src/: cstring.cpp  string.cpp
tests/: CMakeLists.txt  utils.cpp  utils.h
tests/algorithm/: zalgsuff.cpp
tests/cstring/: memcpy.cpp  strcopy.cpp  strcpy.cpp  strlen.cpp
tests/string/: access.cpp  append.cpp  assignment.cpp  constructor.cpp  erase.cpp  find.cpp  insert.cpp  replace.cpp  reserve.cpp  resize.cpp  shrink_to_fit.cpp
tests/utils/: general.cpp  general.h  string.cpp  string.h
